--- a/app/src/main/res/menu/main_activity_drawer.xml
+++ b/app/src/main/res/menu/main_activity_drawer.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <group android:checkableBehavior="single">
+    <group>
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_agenda"
             android:icon="@drawable/ic_menu_agenda"
             android:title="@string/agenda" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_current_tasks"
             android:icon="@drawable/ic_menu_current_tasks"
             android:title="@string/current_tasks" />
+
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_add_task"
+            android:icon="@android:drawable/ic_input_add"
+            android:title="@string/add_task"/>
+
+        <item
+            android:id="@+id/nav_calendar"
             android:icon="@drawable/ic_menu_calendar"
             android:title="@string/calendar" />
 
         <item
-            android:id="@+id/action_settings"
+            android:id="@+id/nav_settings"
             android:icon="@drawable/ic_menu_settings"
             android:title="@string/action_settings"/>
     </group>
