--- a/app/src/main/res/layout/fragment_add_task.xml
+++ b/app/src/main/res/layout/fragment_add_task.xml
@@ -30,8 +30,8 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="@string/title"
-        android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        android:inputType="textCapWords"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -44,7 +44,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="@string/description"
-        android:inputType="textPersonName"
+        android:inputType="textCapSentences"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_task_title_et" />
@@ -58,7 +58,7 @@
         android:layout_marginEnd="16dp"
         android:ems="10"
         android:hint="@string/category"
-        android:inputType="textPersonName"
+        android:inputType="textCapWords"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragment_add_task_desc_et" />
